# cadence

./: .gitignore  LICENSE  README.md  cadence.morph  pyproject.toml
.github/workflows/: ci.yml  morpholog.yml
examples/: 01_market_data.py  02_alice_sizing.py  03_execution.py  04_dan_backtest.py  04_dan_stat_arb.py  05_risk_gate.py
src/cadence/: __init__.py  backtest.py  data.py  execution.py  forecast.py  pipeline.py  risk.py  signals.py  sizing.py
tests/: test_morpholog_governor.py  test_smoke.py
